[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/Dice 32-CC-B.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Dice 32-CC-1.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Dice 32-CC-5.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Dice 32-CC-2.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Dice 32-CC-3.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Dice 32-CC-6.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Dice 32-CC-4.png" type="Texture" id=7]
[ext_resource path="res://Dice/Sliding Die.gd" type="Script" id=8]
[ext_resource path="res://Audio/Tap 1.wav" type="AudioStream" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="Sliding Die" type="KinematicBody2D" groups=["dice"]]
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 16, 16 )
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 16, 16 )
enabled = true

[node name="Snap SFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )

[node name="Dice 0" type="Sprite" parent="."]
visible = false
position = Vector2( 16, 16 )
texture = ExtResource( 1 )

[node name="Dice 1" type="Sprite" parent="."]
visible = false
position = Vector2( 16, 16 )
texture = ExtResource( 2 )

[node name="Dice 2" type="Sprite" parent="."]
visible = false
position = Vector2( 16, 16 )
texture = ExtResource( 4 )

[node name="Dice 3" type="Sprite" parent="."]
visible = false
position = Vector2( 16, 16 )
texture = ExtResource( 5 )

[node name="Dice 4" type="Sprite" parent="."]
visible = false
position = Vector2( 16, 16 )
texture = ExtResource( 7 )

[node name="Dice 5" type="Sprite" parent="."]
visible = false
position = Vector2( 16, 16 )
texture = ExtResource( 3 )

[node name="Dice 6" type="Sprite" parent="."]
visible = false
position = Vector2( 16, 16 )
texture = ExtResource( 6 )

[node name="RayCast2D 0" type="RayCast2D" parent="."]
position = Vector2( 6, 0 )
cast_to = Vector2( 0, -16 )

[node name="RayCast2D 1" type="RayCast2D" parent="."]
position = Vector2( 26, 0 )
cast_to = Vector2( 0, -16 )

[node name="RayCast2D 2" type="RayCast2D" parent="."]
position = Vector2( 32, 6 )
cast_to = Vector2( 16, 0 )

[node name="RayCast2D 3" type="RayCast2D" parent="."]
position = Vector2( 32, 26 )
cast_to = Vector2( 16, 0 )

[node name="RayCast2D 4" type="RayCast2D" parent="."]
position = Vector2( 26, 32 )
cast_to = Vector2( 0, 16 )

[node name="RayCast2D 5" type="RayCast2D" parent="."]
position = Vector2( 6, 32 )
cast_to = Vector2( 0, 16 )

[node name="RayCast2D 6" type="RayCast2D" parent="."]
position = Vector2( 0, 26 )
cast_to = Vector2( -16, 0 )

[node name="RayCast2D 7" type="RayCast2D" parent="."]
position = Vector2( 0, 6 )
cast_to = Vector2( -16, 0 )

[node name="Area2D 0" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D 0"]
polygon = PoolVector2Array( 0, 0, 2, -1, 30, -1, 32, 0 )

[node name="Area2D 1" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D 1"]
polygon = PoolVector2Array( 32, 0, 33, 2, 33, 30, 32, 32 )

[node name="Area2D 2" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D 2"]
polygon = PoolVector2Array( 32, 32, 30, 33, 2, 33, 0, 32 )

[node name="Area2D 3" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D 3"]
polygon = PoolVector2Array( -1, 2, 0, 0, 0, 32, -1, 30 )

[connection signal="body_entered" from="Area2D 0" to="." method="_on_Area2D_0_body_entered"]
[connection signal="body_entered" from="Area2D 1" to="." method="_on_Area2D_1_body_entered"]
[connection signal="body_entered" from="Area2D 2" to="." method="_on_Area2D_2_body_entered"]
[connection signal="body_entered" from="Area2D 3" to="." method="_on_Area2D_3_body_entered"]
